--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 # --- Framework Web ---
 Flask==3.1.2
 gunicorn==21.2.0
+black==25.11.0
 
 # --- Machine Learning / IA (TensorFlow y Keras) ---
 tensorflow==2.20.0
